--- a/class/index.html
+++ b/class/index.html
@@ -267,7 +267,7 @@
 </div>
 
 <div id="studentStatsPop" class="pop" style="padding-top:0px">
-  <div>
+  <div style="margin-left: 23px;">
     <div id="totalProgressTableDiv">
       <p id="totalProgressTableP"></p>
       <table id="totalProgressTable" class="progressBarTable"></table>
