--- a/class/index.html
+++ b/class/index.html
@@ -152,9 +152,9 @@
     </div>
   </div>
   <div id="currentPlayerContainer">
-    <div class="secretButton2 ptr" onclick="actionAlert('Delete this player?',['playGamePop'],deleteCurrentPlayer)"></div>
+    <div class="playerActions ptr" onclick="actionAlert('Delete this player?',['playGamePop'],deleteCurrentPlayer)">DELETE PLAYER</div>
     <p id="currentPlayer"></p>
-    <div class="secretButton2 ptr" onclick="actionAlert('Skip this player?',['playGamePop'],skipPlayer)"></div>
+    <div class="playerActions ptr" onclick="actionAlert('Skip this player?',['playGamePop'],skipPlayer)">SKIP PLAYER</div>
   </div>
   <div id="gamePointButtonsContainer">
     <div class="gamePointButton ptr" id="gamePoint1" onclick="gameScorePts(1)">1</div>
