--- a/class/index.html
+++ b/class/index.html
@@ -763,7 +763,7 @@
         <td>Date</td>
         <td>AM</td>
         <td>PM</td>
-        <td>BOTH</td>
+        <td>Both</td>
       </tr>
     </table>
   </div>
