--- a/class/index.html
+++ b/class/index.html
@@ -109,9 +109,11 @@
     <div class="button ptr" id="promoButton" onclick="loadPromos(); pop(['alertsPop'],['customListPop'])">Promotions</div>
     <div class="button ptr" id="bdButton" onclick="loadBds(); pop(['alertsPop'],['customListPop'])">Birthdays</div>
     <div class="button ptr" id="remindersButton" onclick="pop(['alertsPop'],['remindersPop']); populateReminders()">Reminders</div>
-    <div class="button ptr" id="photosNeededButton" onclick="loadNeededPhotos(); pop(['alertsPop'],['customListPop'])">Missing Photos</div>
-    <div class="button ptr" id="emailsNeededButton" onclick="loadNeededEmails(); pop(['alertsPop'],['customListPop'])">Missing Emails</div>
-    <div class="button ptr" id="bdNeededButton" onclick="loadNeededBds(); pop(['alertsPop'],['customListPop'])">Missing Birthdays</div>
+    <div style="display:none;">
+      <div class="button ptr" id="photosNeededButton" onclick="loadNeededPhotos(); pop(['alertsPop'],['customListPop'])">Missing Photos</div>
+      <div class="button ptr" id="emailsNeededButton" onclick="loadNeededEmails(); pop(['alertsPop'],['customListPop'])">Missing Emails</div>
+      <div class="button ptr" id="bdNeededButton" onclick="loadNeededBds(); pop(['alertsPop'],['customListPop'])">Missing Birthdays</div>
+    </div>
 </div>
 
 <div id="teamsListPop" class="pop">
