--- a/class/index-phone.html
+++ b/class/index-phone.html
@@ -15,7 +15,6 @@
         <div id="mainMenuButton" class="roundButton2 ptr" onclick="pop(['mainPop'],['mainMenuPop'])">H</div>
         <div id="alertButton" class="roundButton2 ptr" onclick="alertsPop()">#</div>
         <div id="lockButton" class="roundButton2 ptr" onclick="disableAtt()">K</div>
-        <!-- <div id="allergiesButton" class="roundButton2 ptr" style="padding-top:6px" onclick="allergiesPop()">A</div> -->
         <div id="attCountButton" class="roundButton2 ptr" onclick="loadAttendees()">0</div>
         <div id="logButton" class="roundButton2 ptr" onclick="logPop()">F</div>
         <div id="backupButton" class="roundButton2 ptr" onclick="populateBackup()">R</div>
@@ -103,15 +102,17 @@
 </div>
 
 <div id="alertsPop" class="pop">
-    <div class="navigationButtonContainer">
-      <div class="backButton ptr" onclick="goHome()">f</div>
-    </div>
-    <div class="button ptr" id="promoButton" onclick="loadPromos(); pop(['alertsPop'],['customListPop'])">Promotions</div>
-    <div class="button ptr" id="bdButton" onclick="loadBds(); pop(['alertsPop'],['customListPop'])">Birthdays</div>
-    <div class="button ptr" id="remindersButton" onclick="pop(['alertsPop'],['remindersPop']); populateReminders()">Reminders</div>
+  <div class="navigationButtonContainer">
+    <div class="backButton ptr" onclick="goHome()">f</div>
+  </div>
+  <div class="button ptr" id="promoButton" onclick="loadPromos(); pop(['alertsPop'],['customListPop'])">Promotions</div>
+  <div class="button ptr" id="bdButton" onclick="loadBds(); pop(['alertsPop'],['customListPop'])">Birthdays</div>
+  <div class="button ptr" id="remindersButton" onclick="pop(['alertsPop'],['remindersPop']); populateReminders()">Reminders</div>
+  <div style="display:none;">
     <div class="button ptr" id="photosNeededButton" onclick="loadNeededPhotos(); pop(['alertsPop'],['customListPop'])">Missing Photos</div>
     <div class="button ptr" id="emailsNeededButton" onclick="loadNeededEmails(); pop(['alertsPop'],['customListPop'])">Missing Emails</div>
     <div class="button ptr" id="bdNeededButton" onclick="loadNeededBds(); pop(['alertsPop'],['customListPop'])">Missing Birthdays</div>
+  </div>
 </div>
 
 <div id="teamsListPop" class="pop">
@@ -226,14 +227,14 @@
 <div id="studentPop" class="pop">
   <div class="navigationButtonContainer">
     <div class="backButton ptr" onclick="goHome()">f</div>
-    <div id="att2Button" class="otherButton ptr" onclick="populateNames2()">Attendance</div>
+    <div id="att2Button" class="otherButton ptr" onclick="populateNames2()">Add Attendee</div>
   </div>
   <div id="studentPopTopContainerDiv">
-    <div id="studentPopInsignia" class="ptr" onclick="populateStudentProperties(); studentMenuSwitch(4)"></div>
+    <div id="studentPopInsignia" class="ptr" onclick="loadRankTable();resetStudentMenu();"></div>
     <div id="studentPopInfo">
       <p id="studentPopRankName"></p>
       <p id="studentPopName" class="ptr" onclick="toggleAtt()"></p>
-      <p id="studentPopPts"></p>
+      <p id="studentPopPts" class="ptr" onclick="populateStudentProperties(); studentMenuSwitch(4)"></p>
     </div>
   </div>
   <div>
@@ -277,7 +278,7 @@
     <p id="mvProgressTableP"></p>
     <table id="mvProgressTable" class="progressBarTable"> </table>
   </div>
-  <div id="rankProgressTableDiv" class="ptr" onclick="loadRankTable()">
+  <div id="rankProgressTableDiv">
     <p id="rankProgressTableP"></p>
     <table id="rankProgressTable" class="progressBarTable"></table>
   </div>
@@ -527,9 +528,6 @@
 </div>
 
 <div id="asPtsPop" class="pop">
-  <div class="navigationButtonContainer">
-    <div class="backButton ptr" onclick="pop(['asPtsPop'],['missionsPop'])"><span>f</span></div>
-  </div>
   <div class="pointButtonContainer">
       <div id="as1Pts" class="roundButton1 numberButton asPts ptr" onclick="asPts(_asNum,1)">1</div>
       <div id="as2Pts" class="roundButton1 numberButton asPts ptr" onclick="asPts(_asNum,2)">2</div>
@@ -556,20 +554,21 @@
         <td class="tableSider">Status</td>
         <td id="asCompletionStatus"></td>
       </tr>
+      <table class="asmvInfoTable" style="margin-top:30px">
+        <tr>
+          <td colspan="2" class="downloadOrPrint ptr" onclick="asLinks()"><span class="downloadIcon">m &nbsp;&nbsp;</span>PRINT/DOWNLOAD</td>
+        </tr>
+        </table>
+      <table class="asmvInfoTable" style="margin-top:30px">
       <tr>
         <td colspan="2" id="scannedImage" class="ptr" onclick="scanLinks()"><span id="scanIcon">C &nbsp;&nbsp;&nbsp;</span>VIEW SCAN</td>
       </tr>
-      <tr>
-        <td colspan="2" class="downloadOrPrint ptr" onclick="asLinks()"><span class="downloadIcon">m &nbsp;&nbsp;</span>PRINT/DOWNLOAD</td>
-      </tr>
+      </table>
     </table>
   </div>
 </div>
 
 <div id="mvPtsPop" class="pop">
-  <div class="navigationButtonContainer">
-    <div class="backButton ptr" onclick="pop(['mvPtsPop'],['missionsPop'])"><span>f</span></div>
-  </div>
   <div class="pointButtonContainer">
       <div id="mv1Pts" class="roundButton1 numberButton mvPts ptr" onclick="mvPts(_mvNum,1)">1</div>
       <div id="mv2Pts" class="roundButton1 numberButton mvPts ptr" onclick="mvPts(_mvNum,2)">2</div>
@@ -581,6 +580,9 @@
   </div>
   <div>
     <table class="asmvInfoTable">
+      <tr>
+        <td colspan="2" id="mvText"></td>
+      </tr>
       <tr>
         <td class="tableSider">Verse Name</td>
         <td id="mvVerseName"></td>
@@ -597,12 +599,11 @@
         <td class="tableSider">Status</td>
         <td id="mvCompletionStatus"></td>
       </tr>
-      <tr>
-        <td colspan="2" id="mvText"></td>
-      </tr>
-      <tr>
-        <td colspan="2" class="downloadOrPrint ptr" onclick="mvLinks()"><span class="downloadIcon">m &nbsp;&nbsp;</span>PRINT/DOWNLOAD</td>
-      </tr>
+      <table class="asmvInfoTable" style="margin-top:30px">
+        <tr>
+          <td colspan="2" class="downloadOrPrint ptr" onclick="mvLinks()"><span class="downloadIcon">m &nbsp;&nbsp;</span>PRINT/DOWNLOAD</td>
+        </tr>
+        </table>
     </table>
   </div>
 </div>
@@ -691,9 +692,6 @@
 </div>
 
 <div id="rankChartPop" class="pop">
-  <div class="navigationButtonContainer">
-    <div class="backButton ptr" onclick="pop(['rankChartPop'],['studentStatsPop'])"><span>f</span></div>
-  </div>
   <div id = "rankChartContainer">
   <table id="rankChartTable">
     <tr class="tableHeaderRow">
