--- a/class/index-phone.html
+++ b/class/index-phone.html
@@ -714,8 +714,8 @@
     <table id="attStatsTable">
       <tr class="tableHeaderRow">
         <td></td>
-        <td>AM</td>
-        <td>PM</td>
+        <td>10:30</td>
+        <td>5:00</td>
         <td>Both</td>
       </tr>
       <tr>
@@ -755,9 +755,9 @@
     <table id="attListTable">
       <tr class="tableHeaderRow" style="position:sticky;top:73px">
         <td>Date</td>
-        <td>AM</td>
-        <td>PM</td>
-        <td>BOTH</td>
+        <td>10:30</td>
+        <td>5:00</td>
+        <td>Both</td>
       </tr>
     </table>
   </div>
@@ -771,8 +771,8 @@
     <table id="studentAttTable">
       <tr class="tableHeaderRow">
         <td>Date</td>
-        <td>AM</td>
-        <td>PM</td>
+        <td>10:30</td>
+        <td>5:00</td>
       </tr>
     </table>
   </div>
