--- a/students.html
+++ b/students.html
@@ -74,7 +74,7 @@
   </div>
     <!-- <p id="passThruAlertMssg" style="text-align:center;margin-top:35px;">Please choose which missions<br>you wish to download:</p> -->
     <div class="currentMissionsButton ptr" style="margin-top:35px" onclick="downloadCurrentMissions(true)">DOWNLOAD MISSIONS<br>THAT ARE DUE TODAY</div>
-    <div class="ptr" style="margin-top:35px;text-decoration:underline;" onclick="downloadCurrentMissions(false)">If your child is going to miss class today, click here to download the new missions that were handed out.  These should not be turned in until next week.</div>
+    <div class="ptr" style="margin-top:35px;text-decoration:underline;" onclick="downloadCurrentMissions(false)">If your child is going to miss class today, click here to download the new missions that were handed out.  These should not be turned in until next Sunday.</div>
 </div>
 
 <div id="studentStatsPop" class="pop">
@@ -358,4 +358,4 @@
 </body>
 </html>
 
-<!--*-->
+<!---->
