--- a/class/index.html
+++ b/class/index.html
@@ -198,7 +198,7 @@
 <div id="logPop" class="pop">
   <div class="navigationButtonContainer">
     <div class="backButton ptr" onclick="goHome()">f</div>
-    <div class="otherButton ptr" onclick="promoListPop()">Promotions</div>
+    <div class="otherButton ptr" onclick="promoListPop()">Completed Promotions</div>
   </div>
   <input id="searchLog" class="searchField" type="text" placeholder="search log" oninput="searchLog()"/>
   <div id="log" class="ptr" onclick="selectText('log')"></div>
