--- a/class/index.html
+++ b/class/index.html
@@ -226,7 +226,7 @@
 
 <div id="studentPop" class="pop">
   <div class="navigationButtonContainer">
-    <div class="backButton ptr" onclick="goHome()">f</div>
+    <div class="homeButton ptr" onclick="goHome()">5</div>
     <div id="att2Button" class="otherButton ptr" onclick="populateNames2()">Add Attendee</div>
   </div>
   <div id="studentPopTopContainerDiv">
@@ -768,9 +768,6 @@
 </div>
 
 <div id="studentAttStatsPop" class="pop">
-  <div class="navigationButtonContainer">
-    <div class="backButton ptr" onclick="pop(['studentAttStatsPop'],['studentStatsPop'])"><span>f</span></div>
-  </div>
   <div id="studentAttTableDiv">
     <table id="studentAttTable">
       <tr class="tableHeaderRow">
@@ -795,9 +792,6 @@
 </div>
 
 <div id="editPropertyPop" class="pop">
-  <div class="navigationButtonContainer">
-    <div class="backButton ptr" onclick="pop(['editPropertyPop'],['studentPropertiesPop'])">f</div>
-  </div>
   <textarea id="editProperty" rows="10" cols="30" style="height:250px"></textarea>
   <div class="optionButtonContainer">
     <div class="roundButton1 cancelButton ptr" id="editPropertyCancel" onclick="pop(['editPropertyPop'],['studentPropertiesPop'])">X</div>
