--- a/students.html
+++ b/students.html
@@ -194,12 +194,16 @@
         <td class="tableSider">Status</td>
         <td id="asCompletionStatus"></td>
       </tr>
+      <table class="asmvInfoTable" style="margin-top:30px">
+        <tr>
+          <td colspan="2" class="downloadOrPrint ptr" onclick="asLinks()"><span class="downloadIcon">m &nbsp;&nbsp;</span>PRINT/DOWNLOAD</td>
+        </tr>
+        </table>
+      <table class="asmvInfoTable" style="margin-top:30px">
       <tr>
         <td colspan="2" id="scannedImage" class="ptr" onclick="scanLinks()"><span class="scanIcon">C &nbsp;&nbsp;&nbsp;</span>VIEW SCAN</td>
       </tr>
-      <tr>
-        <td colspan="2" class="downloadOrPrint ptr" onclick="asLinks()"><span class="downloadIcon">m &nbsp;&nbsp;</span>PRINT/DOWNLOAD</td>
-      </tr>
+      </table>
     </table>
   </div>
 </div>
@@ -238,8 +242,12 @@
         <td colspan="2" id="mvText"></td>
       </tr>
       <tr>
-        <td colspan="2" class="downloadOrPrint ptr" onclick="mvLinks()"><span class="downloadIcon">m &nbsp;&nbsp;</span>PRINT/DOWNLOAD</td>
       </tr>
+      <table class="asmvInfoTable" style="margin-top:30px">
+        <tr>
+          <td colspan="2" class="downloadOrPrint ptr" onclick="mvLinks()"><span class="downloadIcon">m &nbsp;&nbsp;</span>PRINT/DOWNLOAD</td>
+        </tr>
+      </table>
     </table>
   </div>
 </div>
