--- a/students.html
+++ b/students.html
@@ -77,6 +77,15 @@
     <div class="ptr" style="margin-top:35px;text-decoration:underline;" onclick="downloadCurrentMissions(false)">If your child is going to miss class today, click here to download the new missions that were handed out.  These should not be turned in until next Sunday.</div>
 </div>
 
+<div id="currentMissionsPop2" class="pop">
+  <div class="navigationButtonContainer">
+    <div class="backButton ptr" onclick="pop(['currentMissionsPop2'],['missionsPop'])"><span>f</span></div>
+  </div>
+    <!-- <p id="passThruAlertMssg" style="text-align:center;margin-top:35px;">Please choose which missions<br>you wish to download:</p> -->
+    <div class="currentMissionsButton ptr" style="margin-top:35px" onclick="downloadCurrentMissions(true)">DOWNLOAD MISSIONS<br>THAT ARE DUE TODAY</div>
+    <div class="ptr" style="margin-top:35px;text-decoration:underline;" onclick="downloadCurrentMissions(false)">If your child is going to miss class today, click here to download the new missions that were handed out.  These should not be turned in until next Sunday.</div>
+</div>
+
 <div id="studentStatsPop" class="pop">
 
   <p class="note" style="margin-top:0px">Click on insignia above to view rank progress.<br>Click on any bar graph below for more info.</p>
